[package]
name = "udppp"
version = "1.0.0"
edition = "2024"
authors = ["b23r0 <b23r0@foxmail.com>", "tesinormed"]
description = "mmproxy for UDP"
homepage = "https://github.com/tesinormed/udppp"
repository = "https://github.com/tesinormed/udppp"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
anyhow = "1"
ppp = "2.3"
chrono = "0.4.41"
